--- a/assets/style.css
+++ b/assets/style.css
@@ -53,9 +53,10 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-body {
+/*body {
+}		??? Deux body ???
+*/
 
-}
 section {
 	margin-block: 6em;
 }
