--- a/assets/style.css
+++ b/assets/style.css
@@ -128,6 +128,10 @@ header {
 /* Gestion des fleches du carrousel */
 #banner .arrow {
 	position: absolute;
+	background: none;
+	border: none;
+	padding: 0;
+	cursor: pointer;
 }
 #banner .arrow_left {
 	left: 10px;
@@ -148,7 +152,8 @@ header {
 	background-color: #ffffff00;
 	border: 3px solid #fff;
 	border-radius: 100%;
-	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);;
+	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+	cursor: pointer;
 }
 .dot_selected {
 	background-color: #fff;
